# SimplePrj

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  build_exe.py  pyproject.toml  setup.py  simpleprj.spec
.github/workflows/: ci.yml  code-review.yml  deploy-pages.yml  release.yml  secret-scan.yml
src/: __init__.py  calculator.py  cli.py  main.py  utils.py
tests/: __init__.py  test_calculator.py  test_cli.py  test_utils.py
web_site/: index.html  qa.html
