[project]
name = "simpleprj"
version = "0.1.0"
description = "A simple Python project for testing GitHub CI/CD functionality"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
